--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <script src="./script.js" defer></script>
-    <title>Document</title>
+    <title>Shooting Stars</title>
   </head>
   <body>
     <div class="score">
